Preparing for inital deployment

--- a/meetings.html
+++ b/meetings.html
@@ -2,3 +2,17 @@
 layout: page
 title: Geek Writers Meetings
 ---
+<p>
+  <img src="/images/meeting_in_progress.jpg" alt="Meeting in Progress" title="Meeting in Progress" width="342" height="182" />
+</p>
+<p>The Geek Writers meetings occur on the 4th Wednesday of every month at 6:30pm. 
+  Currently we are holding the meetings at the <a href="http://okccoco.com/">Oklahoma City Coworking Collaborative</a> 
+  in beautiful Midtown Oklahoma City, Oklahoma. The meetings are free and we try to 
+  provide snacks and drinks for everyone who comes. So if you have a love of writing 
+  and consider yourself a geek about it, come on out and join us!</p>
+
+<p>If you want to get the latest news and RSVP for our meetings, see scheduled talks, 
+  participate in writing prompts, and meet the other members, check out our Meetup 
+  group: <a href="http://www.meetup.com/geekwriters/">http://www.meetup.com/geekwriters/</a>.</p>
+  
+<p><a href="http://okccoco.com/?page_id=109">Click here for directions to the OKC CoCo</a>.</p>
