--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@ a { color: #d4481c; }
 <body>
   <h1>404</h1>
   <object type="application/x-shockwave-flash" width="425" height="350" data="http://i.adultswim.com/adultswim/video2/tools/swf/viralplayer.swf"><param name="allowFullScreen" value="true" /><param name="movie" value="http://i.adultswim.com/adultswim/video2/tools/swf/viralplayer.swf"/><param name="FlashVars" value="id=8a2505951cf61ada011cfd284be60042" /><embed src="http://i.adultswim.com/adultswim/video2/tools/swf/viralplayer.swf" type="application/x-shockwave-flash" FlashVars="id=8a2505951cf61ada011cfd284be60042" allowFullScreen="true" width="425" height="350"></embed></object>
-  <p>If you're looking for content, I feel bad for you, son. I've got 99 pages but this page ain't one.</p>
+  <p>Hey y'all, the page isn't here! Oh no!</p>
   <p><a href="http://www.geekwriters.net/">Go home</a></p>
 </body>
 </html>
